Fix: Buttons should have the right size on Safari

--- a/puppetplays-web/components/button.module.scss
+++ b/puppetplays-web/components/button.module.scss
@@ -2,7 +2,9 @@
   display: flex;
   align-items: center;
   background-color: var(--color-brand);
-  font-weight: 700;
+  font-family: var(--ff-sans);
+  font-weight: 500;
+  font-size: 14px;
   padding: 6px 20px;
   border-radius: 20px;
   border: 0;
